# memcloud

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  install.sh  uninstall.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yml
docs/: api_reference.md  interceptor.md
examples/nodejs/: benchmark-comparison.ts  index.ts  intensive-task.ts  large-offload.ts  log-archiver.ts  package.json  streaming-offload.ts
include/: memcloud.h
installers/homebrew/: memcloud.rb
installers/linux/: memcloud.service
installers/macOS/: launchd.plist
interceptor/: memcloud_vm.c
js-sdk/: .gitignore  README.md  package.json
js-sdk/src/: api.ts  socket.ts
memcli/: Cargo.toml
memcli/src/: main.rs
memnode/: Cargo.toml
memnode/src/: main.rs  rpc.rs
memnode/src/blocks/: mod.rs  vm.rs
memnode/src/discovery/: mod.rs
memnode/src/metadata/: mod.rs
memnode/src/net/: auth.rs  mod.rs
memnode/src/peers/: consent.rs  mod.rs  trusted.rs
memsdk/: Cargo.toml
memsdk/src/: c_api.rs  lib.rs
website/src/components/: Badge.tsx  CodeBlock.tsx  InteractiveTerminal.tsx
website/src/pages/: CliDocs.tsx  Index.tsx
