[workspace]
members = [
    "memnode",
    "memsdk",
    "memcli"
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
thiserror = "1.0"
uuid = { version = "1.7", features = ["v4", "serde"] }
log = "0.4"
env_logger = "0.11"
clap = { version = "4.5", features = ["derive"] }
chacha20poly1305 = "0.10"
rand = "0.8"
base64 = "0.22"
anyhow = "1.0"
mdns-sd = "0.10" # Using mdns-sd for better cross-platform support and maintenance
dashmap = "5.5"  # Concurrent HashMap for block storage
bytes = "1.5"
futures = "0.3"
